release-note/1.4.2/el_GR.md
## [1.4.2]
### New
- Η νέα λειτουργία δημιουργίας αντιγράφων ασφαλείας είναι τώρα διαθέσιμη, υποστηρίζοντας το αντίγραφο ασφαλείας μεταξύ δίσκου δικτύου, αποθήκευσης LAN, αποθήκευσης USB και συσκευών ZIMA
- Κατά τη δημιουργία αποθηκευτικού χώρου, υποστηρίζονται τώρα το JBOD και το RAID6 και είναι διαθέσιμη μια νέα διεπαφή δημιουργίας αποθήκευσης
- Στον γενικό πίνακα ρυθμίσεων, προστίθεται η εμφάνιση πληροφοριών συστήματος
- Εμφανίζονται συμβουλές όταν ανοίξει η εφαρμογή και ορισμένες εφαρμογές θα προωθήσουν τον κωδικό πρόσβασης του λογαριασμού
- Υποστήριξη πιστοποιητικών SSL για καλύτερη ασφάλεια πρόσβασης
### Fixed
- Διορθώθηκε το ζήτημα όπου η διεπαφή εξακολουθεί να παρουσιάζει την επέκταση σε εξέλιξη μετά την ολοκλήρωση της επέκτασης
- Βελτιστοποίηση και διορθώσεις λήψης εφαρμογής
- Ο ευφυής πληρεξούσιος υψηλής διαθεσιμότητας: αυτόματα διακόπτει και προσπαθεί διαφανή πληρεξούσια καθρέφτη χωρίς να αλλάζει τη διαμόρφωση, επιτρέποντας την ομαλή έλξη εικόνας σε διαφορετικά περιβάλλοντα δικτύου και σημαντικά βελτιώνοντας τη διαθεσιμότητα και τη λήψη των ποσοστών επιτυχίας για τους παγκόσμιους χρήστες
- Βελτιστοποιημένη διαδικασία λήψης εφαρμογών και βελτιωμένη συνολική εμπειρία λήψης
- Βελτίωση της ταχύτητας λήψης εφαρμογής
- Διορθώθηκε το ανακριβές πρόβλημα προβολής της γραμμής προόδου, καθιστώντας την πρόοδο πιο ακριβή
- Βελτιστοποιημένος χρόνος εκκίνησης εφαρμογών μετά την επανεκκίνηση της συσκευής
- Βελτιστοποιημένος μηχανισμός ελέγχου ενημέρωσης εφαρμογών και βελτιωμένη διαθεσιμότητα ενημέρωσης εφαρμογών
- Διορθωτικά ζητήματα εμφάνισης δίσκου σε διαφορετικές συσκευές
- Βελτιστοποιημένη κατανάλωση πόρων ευρετηρίου
- Βελτιωμένη διαθεσιμότητα λειτουργικότητας αναζήτησης AI
- Σταθερές αποτυχίες τοποθέτησης cloud drive ή προβλήματα εμφάνισης μετά την τοποθέτηση
- Έκδοση με αδυναμία να αποσυνδέσουμε τις μονάδες νέφους
- Το σταθερό Zimaos-HD δεν μοιράζεται σωστά μετά την αρχικοποίηση
- Διορθωμένη αδυναμία για την επιλογή νέων σκληρών δίσκων στις ίδιες υποδοχές δίσκου κατά την ανάκτηση της επιδρομής
- Διορθώθηκε το ζήτημα όπου τα αρχεία που περιέχουν παράνομους χαρακτήρες δεν μπορούσαν να μεταφορτωθούν όταν το MacOS τοποθετεί το Zimaos μέσω SMB.
- Βελτιστοποιημένος μηχανισμός χειρισμού κωδικοποίησης χαρακτήρων, υποστηρίζει τώρα την κανονική μεταφόρτωση αρχείων που περιέχουν ειδικούς χαρακτήρες.
### Tips
- Εάν βρείτε προβλήματα λογισμικού, καλώς ήλθατε να συμμετάσχετε στο Discord και να λάβετε υποστήριξη από 28.000 μέλη της κοινότητας Zima
- <a href = "https://zimaboard.com/discord" target = "_ blank" style = "χρώμα: μπλε"> https://zimaboard.com/discord </a>
